--- a/Desafio_Bootcamp_ETL.ipynb
+++ b/Desafio_Bootcamp_ETL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMv63+my9UfWDjSWo2zRYFi",
+      "authorship_tag": "ABX9TyPA4j7eu2IgmRubFbVX3jw2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Explorando IA Generativa em um Pipeline de ETL com Python\n",
+        "### Um Pipeline de ETL com Python\n",
         "A idéia desse projeto é criar um pipeline simples de ETL. Nesse caso, a ideia aqui é, a partir de uma tabela com dados climáticos do país inteiro (fictícia, por enquanto), filtrar e disponibilizar dados da região nordeste para estudos posteriores.\n",
         "\n",
         "\n"
